2009-10-26  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Eric Seidel.

        Data loss occurs when unbolding nested bold tags.
        https://bugs.webkit.org/show_bug.cgi?id=30083

        Adds a test to make sure WebKit can remove nested b, i, & s tags properly
        without loosing the content of inner elements.

        * editing/style/remove-nested-inline-styles-expected.txt: Added.
        * editing/style/remove-nested-inline-styles.html: Added.
        * editing/style/script-tests/remove-nested-inline-styles.js: Added.
        (removeStyleAndExpect):

2009-10-26  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Darin Adler.

        Rollout r50041-50043.  The HTML5 spec changed to make HTMLOptionsCollection
        inherit from HTMLCollection.

        * fast/dom/wrapper-classes-expected.txt:

2009-10-26  Rahul Kuchhal  <kuchhal@chromium.org>

        Reviewed by Eric Seidel.

        Prevent crash when optgroup element is empty.

        https://bugs.webkit.org/show_bug.cgi?id=30365

        * fast/forms/select-empty-optgroup-expected.txt: Added.
        * fast/forms/select-empty-optgroup.html: Added.

2009-10-26  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed typo fix.

        * platform/qt/Skipped: shared-workers-close.html replaced with shared-worker-close.html

2009-10-23  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adam Barth and Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30723
        <rdar://problem/6189415> Input names added to multipart/form-data headers need to be escaped.

        * http/tests/security/escape-form-data-field-names-expected.txt: Added.
        * http/tests/security/escape-form-data-field-names.html: Added.
        * http/tests/security/resources/escape-form-data-field-names.cgi: Added.

2009-10-26  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Ariya Hidayat.

        [Qt] Skip two flakey tests because of sporadic timeouts.
